Dieter's final edits

--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -14287,3 +14287,60 @@ fixed sequences.},
   year={2007},
   school={Massey University}
 }
+
+@article{strang2014serial,
+  title={Serial reversal learning in bumblebees (Bombus impatiens)},
+  author={Strang, Caroline G and Sherry, David F},
+  journal={Animal Cognition},
+  volume={17},
+  number={3},
+  pages={723--734},
+  year={2014},
+  publisher={Springer}
+}
+
+
+@article{lucon2014discrimination,
+  title={Discrimination reversal learning reveals greater female behavioural flexibility in guppies},
+  author={Lucon-Xiccato, Tyrone and Bisazza, Angelo},
+  journal={Biology Letters},
+  volume={10},
+  number={6},
+  pages={20140206},
+  year={2014},
+  publisher={The Royal Society}
+}
+
+@article{mackintosh1968factors,
+  title={Factors underlying improvement in serial reversal learning.},
+  author={Mackintosh, NJ and Mcgonigle, Brendan and Holgate, Valerie},
+  journal={Canadian Journal of Psychology/Revue canadienne de psychologie},
+  volume={22},
+  number={2},
+  pages={85},
+  year={1968},
+  publisher={University of Toronto Press}
+}
+
+@article{daniel2020serial,
+  title={Serial reversal learning in freshwater stingrays (Potamotrygon motoro)},
+  author={Daniel, Martha MM and Schluessel, Vera},
+  journal={Animal Cognition},
+  volume={23},
+  number={1},
+  pages={109--119},
+  year={2020},
+  publisher={Springer}
+}
+
+
+@article{liu2016learning,
+  title={Learning to learn: advanced behavioural flexibility in a poison frog},
+  author={Liu, Yuxiang and Day, Lainy B and Summers, Kyle and Burmeister, Sabrina S},
+  journal={Animal Behaviour},
+  volume={111},
+  pages={167--172},
+  year={2016},
+  publisher={Elsevier}
+}
+
